temp: layout shift fix

--- a/src/styles/components/common/enhanced-image.scss
+++ b/src/styles/components/common/enhanced-image.scss
@@ -1,5 +1,20 @@
 .enhanced-image-container {
   position: relative;
+  aspect-ratio: 16 / 9;
+  overflow: hidden;
+}
+
+picture.enhanced-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+img.enhanced-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .enhanced-image-text {
